# OcuAssist

./: .gitignore  README.md  build.sh  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: publish.yml
docs/: ai_bbox_feature.md
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  config.example.toml  config.toml  config.toml.bak  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_response_handler.rs  config.rs  lib.rs  main.rs
src/components/: AIAssistant.tsx  App.css  App.tsx  ChatButton.tsx  ChatDialog.tsx  DiagnosticReport.tsx  ImageSelector.tsx  ImageViewer.tsx  LLMConfigDialog.tsx  PatientInfo.tsx
src/components/DiagnosisPanel/: AIChatPage.tsx  AIDiagnosisPage.tsx  index.tsx
src/components/MenuBar/: AppInfo.tsx  PatientInfo.tsx  Tools.tsx  index.tsx
src/components/RecognitionPanel/: AutomorphResultView.tsx  OCTSegResultView.tsx  index.tsx  (+1 more)
src/context/: AIChat.tsx  AppSettings.tsx  Diagnosis.tsx  DiagnosisContext.tsx  DoctorInfo.tsx  FundImage.tsx  ImageContext.tsx  PatientInfo.tsx  Recognition.tsx
src/router/: AutomorphReport.tsx  DiagnosticReport.tsx  DoctorInfoDialog.tsx  PatientInfoForm.tsx  SettingsDialog.tsx
src/styles/: report-layout.css  smooth.css
src/types/: AIChatType.tsx  Diagnosis.tsx  DiagnosisType.tsx  DoctorInfoType.tsx  FundImageContextType.tsx  FundImageType.tsx  FundusImage.tsx  PatentInfoType.tsx  PatientInfo.tsx  RecognitionType.tsx  SystemSettingsType.tsx
src/util/: path2base64.tsx  prompts.tsx
src/utils/: CallLlmApi.tsx  Prompts.tsx  parseBBox.tsx  url2base64.tsx
(+10 files in other folders)
